@@ -2750,3 +2750,4 @@ call	a apela, apel	!	2009-01-02 13:59:46	Semnat Anonim (89.38.147.13)
 caret	semnul '^', circumflex, căciuliță		2009-01-02 14:02:18	Semnat Anonim (89.38.147.13)
 option	opțiune	!	2009-01-03 20:38:51	Semnat Anonim (194.54.128.86)
 configuration	configurare [dacă e vorba de acțiunea de configurare a sistemului], configurație [dacă e vorba de un sumă de opțiuni de sistem)	! [[configuration-options-preferences-settings]]	2009-01-03 20:40:06	Semnat Anonim (194.54.128.86)
+home directory	director personal	?  [[traducere-home]]	2009-01-04 00:59:54	Semnat Anonim (127.0.0.1)
